deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopkeeper
  labels:
    app: shopkeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopkeeper
  template:
    metadata:
      labels:
        app: shopkeeper
    spec:
      containers:
        - name: shopkeeper
          image: registry.paranoids.us/shopkeeper:main
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: shopkeeper-svc
spec:
  selector:
    app: shopkeeper
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress-apps-service
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.paranoids.us
      secretName: paranoids-tls
  rules:
    - host: api.paranoids.us
      http:
        paths:
          - pathType: Prefix
            path: /shopkeeper(/|$)(.*)
            backend:
              service:
                name: shopkeeper-svc
                port:
                  number: 80
